[tool.poetry]
name = "Toykoin"
version = "0.0.0"
description = "A toy cryptocurrency"
authors = ["Giacomo Caironi <giacomo.caironi@gmail.com>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.1"
sqlalchemy = "^1.3.19"
btclib = {path = "../btclib"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
